Fix mobile misalignment.

--- a/client/a8c-for-agencies/sections/marketplace/hosting-overview/hosting-v2/standard-agency-hosting/style.scss
+++ b/client/a8c-for-agencies/sections/marketplace/hosting-overview/hosting-v2/standard-agency-hosting/style.scss
@@ -17,6 +17,7 @@
 	flex-direction: column;
 	align-items: center;
 	gap: 8px;
+	text-align: center;
 }
 
 .standard-agency-hosting__banner-description {
