--- a/client/a8c-for-agencies/sections/marketplace/hosting-overview/hosting-v2/standard-agency-hosting/wpcom-plan-selector/style.scss
+++ b/client/a8c-for-agencies/sections/marketplace/hosting-overview/hosting-v2/standard-agency-hosting/wpcom-plan-selector/style.scss
@@ -12,8 +12,10 @@
 	width: 100%;
 	margin: 0 auto;
 
-	.a4a-slider {
-		margin-inline-start: -93px;
+	@include break-huge {
+		.a4a-slider {
+			margin-inline-start: -93px;
+		}
 	}
 }
 
